--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,8 @@
     {%- include footer.html -%}
     {% include analytics.html %}
     
+    <script id="dsq-count-scr" src="//vivienfabing.disqus.com/count.js" async></script>
+
   </body>
 
 </html>
