ADD disqus comments count

--- a/_includes/algolia.html
+++ b/_includes/algolia.html
@@ -18,6 +18,7 @@ const hitTemplate = function(hit) {
 
   let url = `{{ site.baseurl }}${hit.url}#${hit.anchor}`;
   let commentUrl = `{{ site.baseurl }}${hit.url}#disqus_thread`;
+  let pageId = `${hit.url.replace(/\.[^/.]+$/, "")}`;
 
   const title = hit._highlightResult.title.value;
 
@@ -35,7 +36,8 @@ const hitTemplate = function(hit) {
       <span class="post-meta">${date}</span>
       <h2><a class="post-link" href="${url}">${title}</a></h2>
       {{#breadcrumbs}}<a href="${url}" class="post-breadcrumbs">${breadcrumbs}</a>{{/breadcrumbs}}
-      <a data-disqus-identifier="${hit.url}" href="${commentUrl}">Comments</a>
+      <a href=${commentUrl}" data-disqus-identifier="${pageId}">0 Comments</a>
+      <span class="disqus-comment-count" data-disqus-url="${hit.url}"> <!-- Count will be inserted here --> </span>
       <div class="post-snippet">${content}</div>
     </div>
   `;
