--- a/_includes/algolia.html
+++ b/_includes/algolia.html
@@ -36,7 +36,7 @@ const hitTemplate = function(hit) {
       <span class="post-meta">${date}</span>
       <h2><a class="post-link" href="${url}">${title}</a></h2>
       {{#breadcrumbs}}<a href="${url}" class="post-breadcrumbs">${breadcrumbs}</a>{{/breadcrumbs}}
-      <a href=${commentUrl}" data-disqus-identifier="${pageId}">0 Comments</a>
+      <a href="${commentUrl}" data-disqus-identifier="${pageId}">0 Comments</a>
       <span class="disqus-comment-count" data-disqus-url="${hit.url}"> <!-- Count will be inserted here --> </span>
       <div class="post-snippet">${content}</div>
     </div>
