ADD Related Posts + bundle update

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,6 +24,7 @@ layout: default
 
   <div class="post-content e-content" itemprop="articleBody">
     {{ content }}
+    {% include related-posts.html %}
     {% include social-share.html %}
   </div>
 
